# 100doc-clicker

./: .editorconfig  README.md  pyproject.toml  tox.ini
.github/workflows/: mypy.yaml  tox.yaml
src/_100doc_clicker/: __init__.py  runner.py
tests/: test_runner.py
